# UAV-Medical-Network-Optimization

./: .gitignore  Colaprioridad.py  Colaprioridades.ipynb  LICENSE  README.md  READme.md  READme_contenido_por_archivo.md  Redaccion.md  clases.py  clima.py  cola_prioridad.py  config.py  diagnostico.py  flota.py  funcionamiento_bateria_tests.py  generador.py  generar_mapa.py  graficas.py  hospitales_almacenes_data.py  main.py  mapa.ipynb  memoria_proyecto.tex  modelos.py  montecarlo.py  montecarlo_detalle_14dias.csv  montecarlo_escenarios_dimensionamiento.py  montecarlo_resumen_14dias.csv  network_data.py  parametros_globales.py  progress.txt  pyproject.toml  radar_app.py  red.py  requirements.txt  salida.txt  salida2.txt  simulacion.py  telemetria.py  telemetria_vuelos.json  validacion_pedidos_inventarios.py  (+1 more)
Archivos de texto/: README.md  especificaciones_dron.txt  requirements.txt
Características drones/: Batería_drone.py
Climatología/: aemet_client.py  weather_processor.py
Datos climatológicos/: valoresclimatologicos_madrid-retiro.csv
Grafo/: generar_mapa.py  grafo.html  hospitales_madrid_grafo.html
apps/: radar_app.py
controllers/: fleet_controller.py  gestor_flota_controller.py  simulation_controller.py
datasets_montecarlo_dimensionamiento_1semana/: checkpoint_clima_completo.csv  checkpoint_cola_tiempo.csv  checkpoint_drones_completo.csv  checkpoint_productos_completo.csv  checkpoint_resumen_escenarios_completo.csv  checkpoint_simulaciones_completo.csv  montecarlo_drones_completo.csv  montecarlo_productos_completo.csv  tabla_montecarlo.csv  (+1 more)
(+67 files in other folders)
