[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-medical-network-optimization"
version = "0.1.0"
description = "Discrete-event simulation for a medical drone logistics network."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "folium>=0.14.0",
    "branca>=0.6.0",
    "streamlit>=1.22.0",
    "pydeck>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
